# spark-lightstreamer-data-source

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  env.example  pyproject.toml  pytest.ini
.github/workflows/: onpush.yml
docker/: Dockerfile.lightstreamer  adapters.xml  docker-compose.yml
examples/: README.md  basic_usage.ipynb
instructions/: 01-build.md
scripts/: demo_without_server.py  simple_example.py  test_connection.py
src/lightstreamer_pyspark/: __init__.py  data_source.py  lightstreamer_client.py
tests/: DEMO_ADAPTERS_TESTS.md  README.md  __init__.py  conftest.py  test_data_source.py  test_integration.py  test_lightstreamer_client.py  test_public_demo.py
